--- a/index.html
+++ b/index.html
@@ -82,8 +82,128 @@
     <section id="stack" class="section">
       <div class="u-wrapper">
         <h2 class="section__title section__title--green">Stack</h2>
-        <h3 class="section__subtitle">Backend</h3>
         <div class="section__grid">
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/Typescript_logo_2020.png"
+                alt="typescript"
+              />
+            </div>
+            <p class="section__grid__card__content">TypeScript</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                src="img/react.png"
+                alt="React"
+              />
+            </div>
+            <p class="section__grid__card__content">React</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/git.png"
+                alt="Git"
+              />
+            </div>
+            <p class="section__grid__card__content">Git</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/travis.png"
+                alt="Travis CI"
+              />
+            </div>
+            <p class="section__grid__card__content">Travis CI</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/styled-components.png"
+                alt="Styled Components"
+              />
+            </div>
+            <p class="section__grid__card__content">Styled Components</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/sass.png"
+                alt="sass"
+              />
+            </div>
+            <p class="section__grid__card__content">Sass</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/next.png"
+                alt="next.js"
+              />
+            </div>
+            <p class="section__grid__card__content">Next.js</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/jest.png"
+                alt="jest"
+              />
+            </div>
+            <p class="section__grid__card__content">Jest</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/graphql.png"
+                alt="graphql"
+              />
+            </div>
+            <p class="section__grid__card__content">GraphQL</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/github-actionspng.png"
+                alt="Github actions"
+              />
+            </div>
+            <p class="section__grid__card__content">Github Actions</p>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="section__grid__card__body__image"
+                src="img/apollo.png"
+                alt="Apollo"
+              />
+            </div>
+            <p class="section__grid__card__content">Apollo</p>
+          </div>
+
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
@@ -97,10 +217,7 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
                 src="img/laravel.png"
                 alt="Laravel"
               />
@@ -110,10 +227,7 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
                 src="img/nodejs.png"
                 alt="Node.js"
               />
@@ -123,26 +237,17 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
                 src="img/express.png"
                 alt="Express"
               />
             </div>
             <p class="section__grid__card__content">Express</p>
           </div>
-        </div>
-        <h3 class="section__subtitle">Frontend</h3>
-        <div class="section__grid">
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
                 src="img/JavaScript.png"
                 alt="JavaScript"
               />
@@ -151,10 +256,7 @@
           </div>
           <div class="section__grid__card">
             <img
-              class="
-                section__grid__card__body__image
-                section__grid__card__body__image--w-5
-              "
+              class="section__grid__card__body__image section__grid__card__body__image--w-5"
               src="img/HTML.png"
               alt="HTML"
             />
@@ -163,28 +265,12 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
+                class="section__grid__card__body__image section__grid__card__body__image--w-5"
                 src="img/css.png"
                 alt="CSS"
               />
             </div>
             <p class="section__grid__card__content">CSS</p>
-          </div>
-          <div class="section__grid__card">
-            <div class="section__grid__card__body">
-              <img
-                class="
-                  section__grid__card__body__image
-                  section__grid__card__body__image--w-5
-                "
-                src="img/react.png"
-                alt="React"
-              />
-            </div>
-            <p class="section__grid__card__content">React</p>
           </div>
         </div>
       </div>
