--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 class="section__grid__card__content__button"
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://ranayas.github.io/xClothes"
+                href="https://renzoansa.github.io/xClothes"
                 >Live</a
               >
               <a
@@ -367,7 +367,7 @@
                 class="section__grid__card__content__button"
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://ranayas.github.io/spacex-rockets-rolodex/"
+                href="https://renzoansa.github.io/spacex-rockets-rolodex/"
                 >Live</a
               >
               <a
